[package]
name = "ds2_injector"
version = "0.2.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.61.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
sysinfo = "0.37.0"
lazy_static = "1.5.0"

[lib]
path = "src/lib.rs"