[package]
name = "memory_box"
version = "0.2.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
memchr = "2.7.6"

[lib]
path = "src/lib.rs"